Add reactive styling* + credits** *add slider element to test values *add 2 time related functions *add 2 style transform functions based on time **add weather api credits add basic css styling to make style funcs work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather.rainy</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="main.js" defer></script>
     <script
@@ -28,7 +28,13 @@
     <div class="footer-container">
       <div class="links">
         <a href=""><i class="fa-brands fa-github"></i> dymjin</a>
+        <a href="https://www.weatherapi.com/" title="Free Weather API"
+          ><img
+            src="//cdn.weatherapi.com/v4/images/weatherapi_logo.png"
+            alt="Weather data by WeatherAPI.com"
+        /></a>
       </div>
     </div>
+    <input type="range" id="gradient" min="0" max="24" />
   </body>
 </html>
