--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       </div>
       <div class="searchbar-container">
         <label for="location-search"><i class="fa-solid fa-search"></i></label>
-        <input type="search" id="location-search" />
+        <input type="search" id="location-search" list="locations" />
+        <datalist id="locations"></datalist>
+        <i
+          class="fa-solid fa-spinner fa-spin-pulse hidden"
+          id="location-loading"
+        ></i>
         <!-- <datalist id="country-list">
           <option value="Afghanistan"></option>
           <option value="Albania"></option>
@@ -300,7 +305,7 @@
           <div class="weather-details-container" data="3"></div>
         </div>
       </div> -->
-      <!-- <div class="weather-details-container">
+        <!-- <div class="weather-details-container">
         <div class="temperature-container">
           <i id="temp-icon" class="fa-solid fa-temperature-empty"></i>
           <span class="temp-text">90 C</span>
@@ -320,8 +325,8 @@
         <div class="location-container">
           <i id="location-icon" class="fa-solid fa-location-dot"></i>
           <span class="location-text">Nowhere, Somewhere</span>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
     </div>
     <div class="footer-container">
       <div class="links">
