Add structural styling* *move around elems in js to style easier *add extra containers to html for easier styling *wrap certain elems in containers for better styling

--- a/index.html
+++ b/index.html
@@ -25,66 +25,10 @@
           id="location-loading"
         ></i>
       </div>
-      <div class="weather-days-container">
-        <!-- <div class="day-container" data="1">
-          <h1 class="day-title" data="1">Sunday</h1>
-          <i class="fa-solid fa-circle-info"></i>
-          <div class="day-time">10:20</div>
-          <div class="temperature">90 C</div>
-          <img src="./weather_icons/day/227.png" alt="Sunny" />
-          <div class="weather-details-container" data="1" style="display: none">
-            <div class="temperature-container">
-              <i id="temp-icon" class="fa-solid fa-temperature-empty"></i>
-              <span class="temp-text">90 C</span>
-            </div>
-            <div class="wind-container">
-              <i id="wind-icon" class="fa-solid fa-wind"></i>
-              <span class="wind-text"> 90 kph | SE | 90 deg</span>
-            </div>
-            <div class="humidity-container">
-              <i id="humidity-icon" class="fa-solid fa-droplet"></i>
-              <span class="humidity-text"> 90%</span>
-            </div>
-            <div class="time-container">
-              <i id="time-icon" class="fa-solid fa-clock"></i>
-              <span class="time-text">17 May 10:23</span>
-            </div>
-            <div class="location-container">
-              <i id="location-icon" class="fa-solid fa-location-dot"></i>
-              <span class="location-text">Nowhere, Somewhere</span>
-            </div>
-          </div>
+      <div class="weather-content">
+        <div class="weather-data-container">
+          <div class="weather-days-container"></div>
         </div>
-        <div class="day-container" data="2">
-          <h1 class="day-title" data="2">Day 2</h1>
-          <div class="weather-details-container" data="2"></div>
-        </div>
-        <div class="day-container" data="3">
-          <h1 class="day-title" data="3">Day 3</h1>
-          <div class="weather-details-container" data="3"></div>
-        </div>
-      </div> -->
-        <!-- <div class="weather-details-container">
-        <div class="temperature-container">
-          <i id="temp-icon" class="fa-solid fa-temperature-empty"></i>
-          <span class="temp-text">90 C</span>
-        </div>
-        <div class="wind-container">
-          <i id="wind-icon" class="fa-solid fa-wind"></i>
-          <span class="wind-text"> 90 kph | SE | 90 deg</span>
-        </div>
-        <div class="humidity-container">
-          <i id="humidity-icon" class="fa-solid fa-water"></i>
-          <span class="humidity-text"> 90%</span>
-        </div>
-        <div class="time-container">
-          <i id="time-icon" class="fa-solid fa-clock"></i>
-          <span class="time-text">17 May 10:23</span>
-        </div>
-        <div class="location-container">
-          <i id="location-icon" class="fa-solid fa-location-dot"></i>
-          <span class="location-text">Nowhere, Somewhere</span>
-        </div> -->
       </div>
     </div>
     <div class="footer-container">
