Add loading icon for weather data* *while waiting for weatherData to fetch, display loading icon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             ></i>
           </div>
         </div>
-        <div class="weather-data-container">
+        <div class="weather-data-container hidden">
+          <i
+            class="fa-solid fa-spinner fa-spin-pulse hidden"
+            id="location-data-loading"
+          ></i>
           <div class="weather-days-container"></div>
         </div>
       </div>
